--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/*Begin Site Wide Styles */
 * {
     margin: 0px;
     padding: 0px;
@@ -17,6 +18,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    font-family: 'Raleway','Open Sans',sans-serif;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 1.3em;
+    text-transform: none;
+    font-weight: normal;
 }
 
 .main-container{
@@ -27,6 +35,55 @@ body{
     height: 100%;
 }
 
+.contentScreen1ContainerClass, .contentScreen2ContainerClass{
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	background-color:#ededed;
+	border:1px solid #dcdcdc;
+	color:#777777;
+
+    width: 70%;
+    height: 90%;
+    padding: 20px, 15px;
+    border-radius: 15px;
+    opacity: 0.9;
+}
+
+h1{
+    font-size: 42px;
+    line-height: 1.4em;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.button {
+	box-shadow:inset -2px 2px 10px -1px #54a3f7;
+	background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+	background-color:#007dc1;
+	border-radius:8px;
+	border:1px solid #124d77;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:14px;
+	font-weight:bold;
+	padding:10px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #154682;
+}
+.button:hover {
+	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+	background-color:#0061a7;
+}
+.button:active {
+	position:relative;
+	top:1px;
+}
+
+/*End Site Wide Styles*/
+
+/*
 .contentScreen1ContainerClass{
     background-color: #4a4840;
     width: 70%;
@@ -34,8 +91,7 @@ body{
     padding: 20px, 15px;
     border-radius: 15px;
     opacity: 0.9;
-    /*display: none;*/
-}
+}*/
 
 .contentScreen1Title{
     text-align: center;
@@ -80,10 +136,11 @@ body{
 CONTENT SCREEN2 STYLES
 
 */
+
 .contentScreen2ContainerClass{
-    background-color: red;
+    /*background-color: red;
     width: 70%;
-    height: 90%;
+    height: 90%;*/
     display: none;
 }
 
